# croco_pytools

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makedefs  README.INSTALL  README.ini  README.jupyterlab  README.jupyterlab.md  README.md  diags.py  download_glorys_data.sh  environment.yml  gridop.py  make_bry.py  make_grid.ipynb  make_grid.py  make_grid_param.py  make_ini.py  make_offline_zoom.py  make_rivers.py  make_tides.py  make_zoom_cond.py  merge_DEM_classic-Copy1.ipynb  model.py  plot.py  requirements.yaml  tools.py  tuto_xcroco.ipynb
prepro/: __init__.py  build_nest_AGRIF.ipynb  build_nest_AGRIF.py  build_nest_off.ipynb  build_nest_off.py  config_grid.ini  config_grid_agrif_notebook.ini  config_grid_notebook.ini  config_grid_offline.ini  config_grid_offline_notebook.ini  croco_variables.json  environment_requirements.txt  install.py  make_aforc.py  make_bry.py  make_bry_def.yml  make_grid.ipynb  make_grid.py  make_ini.py  make_ini_def.yml  make_rivers.py  make_tides.py  make_tides_def.yml  make_zoom_ibc.py  pyproject.toml
prepro/Aforc_prepro/: ERA5_convert_dataref.py  ERA5_convert_generic.py  era5_crocotools_param.py
prepro/Modules/: Cgrid_transformation_tools.py  aforc_netcdf.py  aforc_transformation.py  compilation_fortran_tools.py  croco_class.py  data_consistency.py  ibc_class.py  interp_tools.py  merge_topo.py  netcdf_tools.py  sigmagrid_tools.py  tides_class.py  tools_create_grids.py  tools_grid_edition.py  tools_grid_inputs.py  tools_make_grid.py  tools_make_river.py
prepro/Readers/: Aforc_variables.json  aforc_class.py  aforc_reader.py  (+5 more)
(+161 files in other folders)
